[package]
name = "core-text"
version = "8.0.1"
authors = ["The Servo Project Developers"]
description = "Bindings to the Core Text framework."
license = "MIT/Apache-2.0"
repository = "https://github.com/servo/core-text-rs"

[features]
default = ["mountainlion"]
# For OS X 10.7 compat, exclude this feature. It will exclude some things from
# the exposed APIs in the crate.
mountainlion = []

[dependencies]
foreign-types = "0.3"
libc = "0.2"
core-foundation = { version = "0.5", git = "https://github.com/faern/core-foundation-rs", branch = "tcftype-ref-as-associated" }
core-graphics = "0.12.1"

